<package format="2">
    <name>return_to_home_recovery</name>
    <version>1.0.0</version>
    <description>
		This package makes the robot return to home when a path is obbstructed. 

    </description>
    <author email="rungstroem@gmail.com">Kenneth Rungstroem</author> 
    <maintainer email="rungstroem@gmail.com">Kenneth Rungstroem</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>costmap_2d</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>eigen</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>   
    <depend>message_runtime</depend>      
    <build_depend>cmake_modules</build_depend>
    <build_depend>base_local_planner</build_depend>




    <export>
        <nav_core plugin="${prefix}/return_to_home_recovery_plugin.xml" />
    </export>

</package>
